--- a/carparks/.classpath
+++ b/carparks/.classpath
@@ -7,8 +7,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/Xboxe/git/carparks/carparks/jar/jackson-annotations-2.9.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Xboxe/git/carparks/carparks/jar/jackson-core-2.9.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Xboxe/git/carparks/carparks/jar/jackson-databind-2.9.9.jar"/>
+	<classpathentry kind="lib" path="jar/jackson-annotations-2.9.9.jar"/>
+	<classpathentry kind="lib" path="jar/jackson-core-2.9.9.jar"/>
+	<classpathentry kind="lib" path="jar/jackson-databind-2.9.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
